MAINTAINERCLEANFILES = Makefile.in

## Process this file with automake to produce Makefile.in

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/include 

TESTS = neurofitter_test

check_SCRIPTS = neurofitter_test

check_DATA = param.dat parameters.xml

GENESIS_DIST = chansave.g const.g defaults.g neurofitter_test.g	tuningparamData.g

TABLES_DIST = KA.tab Kdr.tab NaF.tab NaP.tab

EXTRA_DIST = $(GENESIS_DIST) $(TABLES_DIST) neurofitter_test

abs_srcdir=@abs_srcdir@

DISTCLEANFILES = param.dat parameters.xml

param.dat: 
	@echo "Generating param.dat..."
	@echo "$(abs_srcdir)/outputs/output_Run0.dat"  >> $@
	@echo '0 '                      		     >> $@
	@echo '123 3203 '                                    >> $@

parameters.xml: 
	@echo "Generating parameters.xml..."
	@echo "<TestProgram>" > $@
	@echo "	<Dimensions>2</Dimensions>	" >> $@
	@echo "	<VerboseLevel>4</VerboseLevel>"   >> $@
	@echo "	<Seed>1550</Seed>"                >> $@ 
	@echo "" >> $@
	@echo "	<SamplingFrequency>5000</SamplingFrequency>" >> $@
	@echo "	<StartingPoints>" >> $@
	@echo "		1.0 1.0" >> $@
	@echo "	</StartingPoints>" >> $@
	@echo "<Bounds>" >> $@
	@echo "	1.0 10000.0 <!-- LowerBound UpperBound -->" >> $@
	@echo "	1.0 50000.0" >> $@
	@echo "</Bounds>" >> $@
	@echo "<WorkingDirectory>.</WorkingDirectory>" >> $@
	@echo "<PrintParameterFile>1</PrintParameterFile>" >> $@
	@echo "" >> $@
	@echo "" >> $@
	@echo "<FitterType>Random</FitterType>" >> $@
	@echo "<FitterParameters>" >> $@
	@echo "<NumberOfPoints>2</NumberOfPoints>" >> $@
	@echo "</FitterParameters>" >> $@
	@echo "" >> $@
	@echo "" >> $@
	@echo "<TracesReaderType>Normal</TracesReaderType>" >> $@
	@echo "<TracesReaderParameters>" >> $@
	@echo "	<NumberOfRuns>1</NumberOfRuns>" >> $@
	@echo "	<NumberOfRunParameters>1</NumberOfRunParameters>" >> $@
	@echo "	<RunParameters>" >> $@
	@echo "		0.0 1.0" >> $@
	@echo "	</RunParameters>" >> $@
	@echo "" >> $@	
	@echo "	<NumberOfPeriods>3</NumberOfPeriods>" >> $@
	@echo "	<Periods>" >> $@
	@echo "		2.0 3.9 0.33 <!-- PeriodStart PeriodSabs Weight -->" >> $@
	@echo "		1.0 1.5 0.33" >> $@
	@echo "		0.5 0.75 0.33" >> $@
	@echo "	</Periods>" >> $@
	@echo "" >> $@
	@echo "<NumberOfRecordSites>1</NumberOfRecordSites>" >> $@
	@echo "	<RecordSites>" >> $@
	@echo "		1 <!-- Weights -->" >> $@
	@echo "	</RecordSites>" >> $@
	@echo "	<OutputFilePrefix>output</OutputFilePrefix>" >> $@
	@echo "</TracesReaderParameters>" >> $@
	@echo "<ModelType>Genesis</ModelType>" >> $@
	@echo "<ModelParameters>" >> $@
	@echo "	<GenesisLocation>genesis</GenesisLocation>" >> $@
	@echo "" >> $@
	@echo "	<ModelDirectory>$(abs_srcdir)</ModelDirectory>" >> $@
	@echo "	<OutputDirectory>$(abs_srcdir)/outputs</OutputDirectory>" >> $@
	@echo "	<ModelSource>$(abs_srcdir)/neurofitter_test.g</ModelSource>" >> $@
	@echo "" >> $@
	@echo "	<ParameterFile>$(abs_srcdir)/param.dat</ParameterFile>" >> $@
	@echo "" >> $@
	@echo "	<ShowExecuteOutput>0</ShowExecuteOutput>"  >> $@
	@echo "</ModelParameters>"  >> $@	
	@echo "" >> $@
	@echo "<ExperimentType>Fake</ExperimentType>" >> $@
	@echo "<ExperimentParameters>" >> $@
	@echo "	<Parameters>2800.0 11200.0</Parameters>	" >> $@
	@echo "</ExperimentParameters>" >> $@
	@echo "" >> $@
	@echo "<ErrorValueCalculatorType>Matrix</ErrorValueCalculatorType>" >> $@
	@echo "<ErrorValueCalculatorParameters>" >> $@
	@echo "	<VdVdtMatrixType>Direct</VdVdtMatrixType>" >> $@
	@echo "	<VdVdtMatrixParameters>" >> $@
	@echo "	    <vLength>100</vLength>" >> $@
	@echo "	    <dVdtLength>100</dVdtLength>" >> $@
	@echo "	    <minimalV>-0.1</minimalV>" >> $@
	@echo "	    <maximalV>0.05</maximalV>" >> $@
	@echo "	    <comparePrecision>1e-15</comparePrecision>" >> $@
	@echo "	    <numericOutputFormat>0</numericOutputFormat>" >> $@
	@echo "	    <SumOfSquareRoots>0</SumOfSquareRoots>" >> $@
	@echo "	</VdVdtMatrixParameters>" >> $@
	@echo "	<enableFileExport>1</enableFileExport>" >> $@
	@echo "	<exportFile>ErrorValues.dat</exportFile>" >> $@
	@echo "</ErrorValueCalculatorParameters>" >> $@
	@echo "</TestProgram>" >> $@
	@echo "	<FitterParameters>" >> $@	
	@echo "	<NOMADFitterParameters>" >> $@	
	@echo "<ITERATIVE_COMPLETE>    0</ITERATIVE_COMPLETE> <!-- Opportunistic 0/1 -->" >> $@
	@echo "<ITERATIVE_POINTS>              10</ITERATIVE_POINTS> <!-- Number of points generated by iteration -->" >> $@
	@echo "" >> $@		
	@echo "		<SPECULATIVE_SEARCH>1</SPECULATIVE_SEARCH>  1" >> $@
	@echo "" >> $@		
	@echo "		<POLL_SIZE_TERM>-1</POLL_SIZE_TERM>    " >> $@
	@echo "		<CONSECUTIVE_FAILS>-1</CONSECUTIVE_FAILS>" >> $@
	@echo "			<TRUTH_EVALS>500</TRUTH_EVALS>" >> $@
	@echo "			<ITERATIONS>-1</ITERATIONS>" >> $@
	@echo "			<NEW_TRUTH_EVALS>-1</NEW_TRUTH_EVALS>" >> $@
	@echo "" >> $@			
	@echo "			<FILTER_RELATIVE>1</FILTER_RELATIVE>" >> $@
	@echo "			<HMAX>50000</HMAX>" >> $@
	@echo "			<HMIN>0.0001</HMIN>" >> $@
	@echo "			<FILTER_NORM>2</FILTER_NORM>" >> $@
	@echo "" >> $@			
	@echo "			<SURROGATE_TOLERANCE>0</SURROGATE_TOLERANCE>" >> $@
	@echo "" >> $@			
	@echo "			<SCALING_CHOICE>0</SCALING_CHOICE>" >> $@
	@echo "			<GEN_CONS_NB>0</GEN_CONS_NB>" >> $@
	@echo "			<USE_SURROGATE>0</USE_SURROGATE>" >> $@
	@echo "" >> $@			
	@echo "			<START_PT_FILE>start_pt.txt</START_PT_FILE>" >> $@
	@echo "			<BOUNDS_FILE>bounds.txt</BOUNDS_FILE>" >> $@
	@echo "			<INPUT_FILE>input.txt</INPUT_FILE>" >> $@
	@echo "			<RESULTS_FILE>results.txt</RESULTS_FILE>" >> $@
	@echo "		</NOMADFitterParameters>" >> $@	
	@echo "	</FitterParameters>" >> $@
	@echo "" >> $@
	@echo "" >> $@
	@echo "    <FitterType>Random</FitterType>" >> $@
	@echo "    <FitterParameters>" >> $@
	@echo "        <NumberOfPoints>2</NumberOfPoints>" >> $@
	@echo "    </FitterParameters>" >> $@
	@echo "" >> $@
	@echo "	<FitterType>Swarm</FitterType>" >> $@
	@echo "	<FitterParameters>" >> $@
	@echo "		<NumberOfRuns>100</NumberOfRuns>" >> $@
	@echo "	</FitterParameters>" >> $@
	@echo "" >> $@
	@echo "" >> $@
	@echo "" >> $@
	@echo "<FitterType>NOMAD</FitterType>" >> $@
	@echo "        <FitterParameters>" >> $@
	@echo "                <outputfile>output.dat</outputfile>" >> $@
	@echo "" >> $@
	@echo "                <!-- parameters.dat -->" >> $@
	@echo "                <COARSENING_EXPONENT>   2</COARSENING_EXPONENT> <!-- Exponent to enlarge poll size in case of failure -->" >> $@
	@echo "                <INITIAL_POLL_SIZE>             1</INITIAL_POLL_SIZE>" >> $@
	@echo "                <POLL_BASIS>                    4</POLL_BASIS>" >> $@
	@echo "                <REFINING_EXPONENT>             -2</REFINING_EXPONENT>" >> $@
	@echo "                <MAX_POLL_SIZE>                 1000000</MAX_POLL_SIZE>" >> $@
	@echo "" >> $@
	@echo "                <POLL_ORDER>                    0</POLL_ORDER> <!-- Dynamic 0/1 -->" >> $@
	@echo "                <POLL_COMPLETE>                 0</POLL_COMPLETE> <!-- Opportunistic 0/1 -->" >> $@
	@echo "                <POLL_DIRECTIONS>               4</POLL_DIRECTIONS> <!-- MADS directions 0/1/2/3/4-->" >> $@
	@echo "" >> $@
	@echo "                <INITIAL_SEARCH>                0</INITIAL_SEARCH> <!-- No initial search 0/1/3 -->" >> $@
	@echo "                <INITIAL_COMPLETE>              0</INITIAL_COMPLETE> <!-- Opportunistic 0/1 -->" >> $@
	@echo "                <INITIAL_POINTS>                20</INITIAL_POINTS> <!-- Number of points after initial search -->" >> $@
	@echo "" >> $@
	@echo "                <ITERATIVE_SEARCH>              1</ITERATIVE_SEARCH> <!-- Random search at start every iteration 0/1/2 -->" >> $@
	@echo "                <ITERATIVE_COMPLETE>    0</ITERATIVE_COMPLETE> <!-- Opportunistic 0/1 -->" >> $@
	@echo "                <ITERATIVE_POINTS>              10</ITERATIVE_POINTS> <!-- Number of points generated by iteration -->" >> $@
	@echo "" >> $@
	@echo "                <SPECULATIVE_SEARCH>    1</SPECULATIVE_SEARCH> <!-- Do a search in poll direction (only MADS) 0/1 -->" >> $@
	@echo "" >> $@
	@echo "                <POLL_SIZE_TERM>                -1</POLL_SIZE_TERM> <!-- Terminate when poll size is smaller than this value -->" >> $@
	@echo "                <ITERATIONS>                    -1</ITERATIONS> <!-- Max number of iterations -->" >> $@
	@echo "                <TRUTH_EVALS>                   500</TRUTH_EVALS> <!-- Max number of truth evaluations -->" >> $@
	@echo "                <NEW_TRUTH_EVALS>               -1</NEW_TRUTH_EVALS> <!-- Max number of non-cache truth evaluations -->" >> $@
	@echo "                <CONSECUTIVE_FAILS>             -1</CONSECUTIVE_FAILS> <!-- Max number of consecutive better-solution-failures -->" >> $@
	@echo "                <FILTER_RELATIVE>               1</FILTER_RELATIVE> <!-- HMax is relative to starting point 0/1 -->" >> $@
	@echo "                <HMAX>                                  50000</HMAX>" >> $@
	@echo "                <HMIN>                                  0.0001</HMIN>" >> $@     
	@echo "                <FILTER_NORM>                   2</FILTER_NORM> <!-- L-2 squared norm 0/1/2 -->" >> $@
	@echo "" >> $@
	@echo "                <SURROGATE_TOLERANCE>   0</SURROGATE_TOLERANCE>" >> $@
	@echo "" >> $@
	@echo "                <!-- description.dat -->" >> $@
	@echo "                <SCALING_CHOICE>                0</SCALING_CHOICE> <!-- No scaling 0/1/2/3 -->" >> $@
	@echo "                <GEN_CONS_NB>                   0</GEN_CONS_NB> <!-- Number of constraints -->" >> $@
	@echo "                <USE_SURROGATE>                 0</USE_SURROGATE> <!-- Use surrogate 0/1 -->" >> $@
	@echo "" >> $@
	@echo "                <START_PT_FILE>start_pt.txt</START_PT_FILE>" >> $@
	@echo "                <BOUNDS_FILE>bounds.txt</BOUNDS_FILE>" >> $@
	@echo "                <RESULTS_FILE>results.txt</RESULTS_FILE>" >> $@
	@echo "	</FitterParameters>" >> $@
	@echo "" >> $@
	@echo "	<FitterType>EO</FitterType>" >> $@
	@echo "	<FitterParameters>" >> $@
	@echo "	<popSize>2</popSize>" >> $@
	@echo "	<nbOffspring>10</nbOffspring>" >> $@
	@echo "	<replacement>Plus</replacement>" >> $@
	@echo "	<maxGen>20</maxGen>" >> $@
	@echo "	<minGen>0</minGen>" >> $@
	@echo "	<maxEval>300</maxEval>" >> $@
	@echo "	<targetFitness>0.0</targetFitness>" >> $@
	@echo "	<steadyGen>100</steadyGen>" >> $@
	@echo "	<crossType>global</crossType>" >> $@
	@echo "	<crossObj>intermediate</crossObj> " >> $@
	@echo "	<TauLoc>1</TauLoc>" >> $@
	@echo "	<TauGlob>1</TauGlob>" >> $@
	@echo "	<Beta>0.0873</Beta>" >> $@
	@echo "	</FitterParameters>" >> $@
	@echo "" >> $@
	@echo "	<FitterType>NOMAD</FitterType>" >> $@
	@echo " <FitterParameters>" >> $@
	@echo " <outputfile>output.dat</outputfile>" >> $@
	@echo "" >> $@
	@echo "<!-- parameters.dat -->" >> $@
	@echo "<COARSENING_EXPONENT>   2</COARSENING_EXPONENT> <!-- Exponent to enlarge poll size in case of failure -->" >> $@
	@echo "<INITIAL_POLL_SIZE>     1</INITIAL_POLL_SIZE>" >> $@
	@echo "<POLL_BASIS>            4</POLL_BASIS>" >> $@
	@echo "<REFINING_EXPONENT>     -2</REFINING_EXPONENT>" >> $@
	@echo "<MAX_POLL_SIZE>         100000</MAX_POLL_SIZE>" >> $@
	@echo "" >> $@
	@echo "<POLL_ORDER>            0</POLL_ORDER> <!-- Dynamic 0/1 -->" >> $@
	@echo "<POLL_COMPLETE>         0</POLL_COMPLETE> <!-- Opportunistic 0/1 -->" >> $@
	@echo "<POLL_DIRECTIONS>       4</POLL_DIRECTIONS> <!-- MADS directions 0/1/2/3/4-->" >> $@
	@echo "" >> $@
	@echo "<INITIAL_SEARCH>        0</INITIAL_SEARCH> <!-- No initial search 0/1/3 -->" >> $@
	@echo "<INITIAL_COMPLETE>      0</INITIAL_COMPLETE> <!-- Opportunistic 0/1 -->" >> $@
	@echo "<INITIAL_POINTS>        2</INITIAL_POINTS> <!-- Number of points after initial search -->" >> $@
	@echo "" >> $@
	@echo "<ITERATIVE_SEARCH>      1</ITERATIVE_SEARCH> <!-- Random search at start every iteration 0/1/2 -->" >> $@
	@echo "<ITERATIVE_COMPLETE>    0</ITERATIVE_COMPLETE> <!-- Opportunistic 0/1 -->" >> $@
	@echo "<ITERATIVE_POINTS>      4</ITERATIVE_POINTS> <!-- Number of points generated by iteration -->" >> $@
	@echo "" >> $@
	@echo "<SPECULATIVE_SEARCH>    1</SPECULATIVE_SEARCH> <!-- Do a search in poll direction (only MADS) 0/1 -->" >> $@
	@echo "" >> $@
	@echo "<POLL_SIZE_TERM>        -1</POLL_SIZE_TERM> <!-- Terminate when poll size is smaller than this value -->" >> $@
	@echo "<ITERATIONS>            -1</ITERATIONS> <!-- Max number of iterations -->" >> $@
	@echo "<TRUTH_EVALS>           10</TRUTH_EVALS> <!-- Max number of truth evaluations -->" >> $@
	@echo "<NEW_TRUTH_EVALS>       -1</NEW_TRUTH_EVALS> <!-- Max number of non-cache truth evaluations -->" >> $@
	@echo "<CONSECUTIVE_FAILS>     -1</CONSECUTIVE_FAILS> <!-- Max number of consecutive better-solution-failures -->" >> $@
	@echo "" >> $@
	@echo "<FILTER_RELATIVE>       1</FILTER_RELATIVE> <!-- HMax is relative to starting point 0/1 -->" >> $@
	@echo "<HMAX>                  50000</HMAX>" >> $@
	@echo "<HMIN>                  0.0001</HMIN>" >> $@
	@echo "<FILTER_NORM>           2</FILTER_NORM> <!-- L-2 squared norm 0/1/2 -->" >> $@
	@echo "" >> $@
	@echo "<SURROGATE_TOLERANCE>   0</SURROGATE_TOLERANCE>" >> $@
	@echo "" >> $@
	@echo "<!-- description.dat -->" >> $@
	@echo "<SCALING_CHOICE>        0</SCALING_CHOICE> <!-- No scaling 0/1/2/3 -->" >> $@
	@echo "<GEN_CONS_NB>           0</GEN_CONS_NB> <!-- Number of constraints -->" >> $@
	@echo "<USE_SURROGATE>         0</USE_SURROGATE> <!-- Use surrogate 0/1 -->" >> $@
	@echo "" >> $@
	@echo "<START_PT_FILE>start_pt.txt</START_PT_FILE>" >> $@
	@echo "<BOUNDS_FILE>bounds.txt</BOUNDS_FILE>" >> $@
	@echo "<RESULTS_FILE>results.txt</RESULTS_FILE>" >> $@
	@echo "</FitterParameters>" >> $@
	@echo "" >> $@
	@echo "-->" >> $@


CLEANFILES = *~
